WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296667
No loading spinner during APMP playback after scrubbing and waiting for the track to play in Safari
https://bugs.webkit.org/show_bug.cgi?id=296667
Summary
No loading spinner during APMP playback after scrubbing and waiting for the t...
Jean-Yves Avenard [:jya]
Reported
2025-07-29 16:54:58 PDT
Steps To Reproduce: 2. Open
https://developer.apple.com/streaming/examples/immersive-media/wide-fov-apmp/
in visionOS Safari 3. Start the inline playback and tap on expand button to go full immersive 4. Scrub playback When scrubbed, while waiting for new frames to start, there is no spinner
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-07-29 16:55:08 PDT
rdar://156606910
Jean-Yves Avenard [:jya]
Comment 2
2025-07-29 16:58:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48694
EWS
Comment 3
2025-07-30 16:03:49 PDT
Committed
298054@main
(aea9b98dab85): <
https://commits.webkit.org/298054@main
> Reviewed commits have been landed. Closing PR #48694 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug